# WorkAgents

./: .azuredeployment  .env.template  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.disabled  .product_mapping.json.example  .product_mapping_forward.json.example  AGENTS.md  ARCHITECTURE_GOVERNANCE.md  AZURE_DEPLOYMENT_GUIDE.md  AZURE_STATIC_WEB_APP_SETUP.md  CLAUDE.md  COLLABORATION_REFACTORING_COMPLETE.txt  CONTRIBUTING.md  DATA_README.md  DEPLOYMENT_REFACTORING_SUMMARY.md  DEVAgentic-Test.tmpbandit_verification.json  FRAMEWORK_REFACTORING_SUMMARY.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_COMPLETE.md  MEMORY.md  METRICS_CLEANUP_SUMMARY.md  METRICS_FEASIBILITY_ANALYSIS.md  MIGRATION_GUIDE.md  ML_PREDICTIONS_COMPLETE.md  NEW_METRICS_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_BENCHMARK_SUMMARY.md  PHASE_7_COMPLETE.md  PHASE_8_COMPLETE.md  PHASE_9_PART1_COMPLETE.md  PROJECT_REVIEW_2026-02-07.md  PROJECT_REVIEW_2026-02-08.md  README.md  REFACTORING_COLLABORATION_DASHBOARD.md  REFACTORING_PROGRESS.md  REFACTORING_QUALITY_DASHBOARD.md  REFACTORING_SUMMARY_ADO_QUALITY_METRICS.md  SECURITY.md  SECURITY_ASSESSMENT.md  SECURITY_DASHBOARD_REFACTOR.md  (+23 more)
.azure-deploy/: requirements.txt  startup.sh
.azure-deploy/execution/: ado_baseline.py  ado_bugs_to_html.py  ado_doe_tracker.py  ado_query_bugs.py  armorcode_baseline.py  armorcode_baseline_v2.py  armorcode_baseline_v3.py  armorcode_list_products.py  armorcode_query_vulns.py  armorcode_report_to_html.py  explore_armorcode_api.py  get_calendar_birthdays.py  introspect_graphql.py  introspect_product_filter.py  org_structure_report.py  run_armorcode_report.bat  scan_all_products.py  scrape_single_site.py  send_armorcode_report.py  send_doe_report.py  send_email.py  send_email_graph.py  send_multi_project_report.py  teams_bug_bot.py  telegram_bug_bot.py  test_all_products.py  test_api_filters.py  test_armorcode_api.py  test_date_filter.py  test_date_filter_comparison.py  test_full_pagination.py  test_graphql_api.py  test_graphql_correct_schema.py  test_graphql_final.py  test_graphql_product_filter.py  test_graphql_products.py  test_legal_product_findings.py  test_new_api_key.py  test_pagination.py  test_product_filter.py  (+2 more)
.claude/: IMPROVEMENTS.md  settings.json  settings.local.json.bak
.github/: dependabot.yml
.github/workflows/: ARMORCODE_SETUP.md  README.md  armorcode-weekly-report.yml  azure-static-web-apps-purple-stone-01287dd10.yml  ci-quality-gates.yml  deploy-api.yml  docs.yml  refresh-dashboards.yml  weekly-doe-report.yml
.tmp/observatory/: ado_structure.json  collaboration_history.json  collector_performance_history.json  deployment_history.json  exploitable_history.json  flow_history.json  ownership_history.json  quality_history.json  risk_history.json  security_history.json
agents/: __init__.py  base_agent.py  run_agent.py
agents/collectors/: __init__.py  quality_agent.py
agents/tests/: __init__.py  test_quality_agent.py
data/: README.md  ai_usage_data.csv  ai_usage_data_example.csv  armorcode_baseline.json  baseline.json  baseline_Access_Legal_Case_Management.json  baseline_LawFusion.json  baseline_Learning_Content_Legal.json  baseline_LegalBricks.json  baseline_Legal_Compliance.json  baseline_Legal_InCase.json  baseline_Legal_Proclaim.json  baseline_test_today.json  model_performance.json  security_targets.json  weekly_tracking.json  weekly_tracking_Access_Legal_Case_Management.json  weekly_tracking_LawFusion.json  weekly_tracking_Learning_Content_Legal.json  weekly_tracking_LegalBricks.json  weekly_tracking_Legal_Compliance.json  weekly_tracking_Legal_InCase.json  weekly_tracking_Legal_Proclaim.json
directives/: _template.md  ado_doe_charter.md  ado_query_bugs.md  armorcode_vulnerabilities.md  org_structure_report.md  scrape_website.md  send_email_graph.md  send_scheduled_email.md
docs/: MIGRATION_GUIDE_SDK_TO_REST.md  ML_PREDICTIONS_README.md  PERFORMANCE_RESULTS.md  REST_API_PERFORMANCE_FEATURES.md  architecture.rst  conf.py  index.rst
docs/adr/: ADR-001-structured-logging.md  ADR-002-datetime-utilities.md  ADR-003-constants-extraction.md  ADR-004-error-handling-patterns.md  ADR-005-god-file-decomposition.md  README.md  (+2 more)
execution/: ARCHITECTURE.md  CONTRIBUTING.md  DEPRECATED.md  DEPRECATED_CLEANUP_REPORT.md  KLOC_INTEGRATION_README.md  README_AI_DASHBOARD_REMOVED.md  __init__.py  _template.py  add_methodology_to_dashboards.py  ado_baseline.py  ado_bugs_to_html.py  ado_collaboration_metrics.py  ado_collaboration_metrics.py.backup  ado_deployment_metrics.py  ado_doe_tracker.py  ado_doe_tracker.py.backup  ado_flow_metrics.py  ado_ownership_metrics.py  ado_quality_metrics.py  ado_query_bugs.py  ado_risk_metrics.py  ado_risk_metrics.py.backup  armorcode_baseline.py  armorcode_baseline_graphql.py  armorcode_enhanced_metrics.py  armorcode_enhanced_metrics.py.backup  armorcode_generate_report.py  armorcode_list_products.py  armorcode_query_vulns.py  armorcode_query_vulns.py.backup  armorcode_report_to_html.py  armorcode_send_email.py  armorcode_weekly_query.py  async_http_client.py  benchmark_collectors.py  benchmark_collectors_enhanced.py  calculate_kloc.py  check_area_paths.py  check_area_paths.py.backup  check_armorcode_creator.py  (+54 more)
frontend/: .env.local  .env.production  index.html  package-lock.json  package.json  vite.config.ts
hooks/: check-architecture-patterns.py  check-security-wrappers.py
memory/: architecture_log.md  intelligence_architecture.md  security_clearances.md
scripts/: build_baseline_secret.py  build_simple_baseline_secret.py  claude_usage.py  de_genericize_history_files.py  degener icize_history_files.py  fetch_armorcode_id_map.py  generate_api_credentials.py  generate_intelligence_report.py  genericize_history_files.py  migrate_armorcode_history_to_ids.py  run_intelligence_pipeline.py
templates/: ado_bugs_report.html  armorcode_report.html  base.html  bug_position_email.html
tests/: conftest.py  test_armorcode_baseline.py  test_config_example.py  test_generate_trends_dashboard.py  test_security_utils.py  test_wiql_integration.py
tools/: migrate_security_wrappers.py
(+471 files in other folders)
