[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[project]
name = "engineering-metrics"
version = "2.0.0"
description = "Engineering metrics and insights platform"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "jinja2>=3.1.6",
    "pandas>=2.2.3",
    "pytest>=9.0.0",
]

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py311"

# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

# Ignore specific rules (gradual enforcement)
ignore = [
    "E501",  # Line too long (will enforce gradually)
]

# Per-file ignores
[tool.ruff.per-file-ignores]
"execution/experiments/*.py" = ["F401", "F841"]  # Allow unused imports/variables in experiments
"execution/archive/*.py" = ["ALL"]  # Ignore archived files
"tests/*.py" = ["F401"]  # Allow unused imports in tests

# Black configuration
[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude specific directories
  | \.venv
  | \.git
  | __pycache__
  | \.pytest_cache
  | execution/experiments
  | execution/archive
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual adoption
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    'execution/experiments/',
    'execution/archive/',
    '.venv/',
]

# Strict type checking for new code
[[tool.mypy.overrides]]
module = "execution.domain.*"
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "execution.dashboards.components.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "execution.core.*"
disallow_untyped_defs = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=execution",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["execution"]
omit = [
    "execution/experiments/*",
    "execution/archive/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
